methods.picture.PictureMono3.scala.error
Compilation error:
PictureMono3:6: error: ';' expected but 'for' found.
 *   for (i <- 1 to 2){
     ^PictureMono3:21: error: ';' expected but identifier found.
  }*/
   ^